--- a/public/app/features/dashboard/audit/partials/log.html
+++ b/public/app/features/dashboard/audit/partials/log.html
@@ -21,61 +21,80 @@
 	</div>
 
 	<div class="tabbed-view-body">
-		<div ng-if="ctrl.revisions.length === 0">
-			<em>No revisions to compare</em>
-		</div>
 
-		<div class="gf-form" ng-if="ctrl.mode === 'list' && ctrl.revisions.length > 0">
-			<div class="gf-form-group">
-				<table class="filter-table">
-					<thead>
-						<tr>
-							<th class="width-4"></th>
-							<th class="width-4"></th>
-							<th class="width-6">Version</th>
-							<th class="width-14">Date</th>
-							<th class="width-10">Created By</th>
-							<th class="width-10">Updated By</th>
-							<th></th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr ng-repeat="revision in ctrl.revisions">
-							<td><input type="radio" ng-model="ctrl.compare.original" ng-value="revision.version"></td>
-							<td><input type="radio" ng-model="ctrl.compare.new" ng-value="revision.version"></td>
-							<td>{{revision.version}}</td>
-							<td>{{ctrl.dashboard.formatDate(revision.created)}}</td>
-							<td>{{ctrl.dashboard.meta.createdBy}}</td>
-							<td>{{revision.createdBy}}</td>
-							<td class="text-right">
-								<a class="btn btn-inverse btn-small" ng-show="revision.version !== ctrl.dashboard.version">
-									<i class="fa fa-rotate-right"></i>&nbsp;&nbsp;Restore this version
+		<div ng-if="ctrl.mode === 'list'">
+			<div ng-if="ctrl.loading">
+				<i ng-if="ctrl.loading" class="fa fa-spinner fa-spin"></i>
+				<em>Fetching audit log…</em>
+			</div>
+
+			<div ng-if="!ctrl.loading">
+				<div ng-if="ctrl.revisions.length === 0">
+					<em>No revisions to compare</em>
+				</div>
+
+				<div class="gf-form" ng-if="ctrl.revisions.length > 0">
+					<div class="gf-form-group">
+						<table class="filter-table">
+							<thead>
+								<tr>
+									<th class="width-4"></th>
+									<th class="width-4"></th>
+									<th class="width-6">Version</th>
+									<th class="width-14">Date</th>
+									<th class="width-10">Created By</th>
+									<th class="width-10">Updated By</th>
+									<th></th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr ng-repeat="revision in ctrl.revisions">
+									<td><input type="radio" ng-model="ctrl.compare.original" ng-value="revision.version"></td>
+									<td><input type="radio" ng-model="ctrl.compare.new" ng-value="revision.version"></td>
+									<td>{{revision.version}}</td>
+									<td>{{ctrl.formatDate(revision.created)}}</td>
+									<td>{{ctrl.dashboard.meta.createdBy}}</td>
+									<td>{{revision.createdBy}}</td>
+									<td class="text-right">
+										<a class="btn btn-inverse btn-small" ng-show="revision.version !== ctrl.dashboard.version" ng-click="ctrl.restore(revision.version)">
+											<i class="fa fa-rotate-right"></i>&nbsp;&nbsp;Restore this version
+										</a>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+						<div class="gf-form-group" ng-show="ctrl.mode === 'list' && ctrl.revisions.length > 0">
+							<div class="gf-form-button-row">
+								<a type="button" class="btn gf-form-button btn-success" ng-class="{disabled: !ctrl.isComparable()}" ng-click="ctrl.getDiff();" ng-disabled="!ctrl.isComparable()">
+									<i class="fa fa-copy" ></i>&nbsp;&nbsp;Compare
 								</a>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-				<div class="gf-form-group" ng-show="ctrl.mode === 'list' && ctrl.revisions.length > 0">
-					<div class="gf-form-button-row">
-						<a type="button" class="btn gf-form-button btn-success" ng-class="{disabled: !ctrl.isComparable()}" ng-click="ctrl.getDiff();" ng-disabled="!ctrl.isComparable()">
-							<i class="fa fa-copy" ></i>&nbsp;&nbsp;Compare
-						</a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 
 		<div class="audit-log" ng-if="ctrl.mode === 'compare'">
-			<div class="clearfix">
-				<a type="button" class="btn gf-form-button btn-secondary pull-left" ng-click="ctrl.mode = 'list'">
-					<i class="fa fa-arrow-left" ></i>&nbsp;&nbsp;Back to audit log
-				</a>
-				<a type="button" class="btn gf-form-button btn-success pull-right" ng-show="ctrl.compare.new === ctrl.revisions[0].version">
-					<i class="fa fa-rotate-right" ></i>&nbsp;&nbsp;Restore version {{ctrl.compare.original}}
-				</a>
+			<div ng-if="ctrl.loading">
+				<i ng-if="ctrl.loading" class="fa fa-spinner fa-spin"></i>
+				<em>Fetching changes…</em>
 			</div>
 
+			<div ng-if="!ctrl.loading">
+				<div class="clearfix">
+					<a type="button" class="btn gf-form-button btn-secondary pull-left" ng-click="ctrl.mode = 'list'">
+						<i class="fa fa-arrow-left" ></i>&nbsp;&nbsp;Back to audit log
+					</a>
+				</div>
+
 				<div ng-bind-html="ctrl.delta">{{ctrl.delta}}</div>
+
+				<div class="clearfix">
+					<a type="button" class="btn gf-form-button btn-secondary pull-left" ng-click="ctrl.mode = 'list'">
+						<i class="fa fa-arrow-left" ></i>&nbsp;&nbsp;Back to audit log
+					</a>
+				</div>
 			</div>
 		</div>
 
