Fix TODOs, render diff, show data

--- a/public/app/features/dashboard/audit/partials/log.html
+++ b/public/app/features/dashboard/audit/partials/log.html
@@ -75,7 +75,7 @@
 				</a>
 			</div>
 
-				<div>{{ctrl.delta}}</div>
+				<div ng-bind-html="ctrl.delta">{{ctrl.delta}}</div>
 			</div>
 		</div>
 
