--- a/public/sass/pages/_dashboard.scss
+++ b/public/sass/pages/_dashboard.scss
@@ -256,3 +256,13 @@ div.flot-text {
   }
 }
 
+.diff-added {
+  color: #333333;
+  background-color: #eaffea;
+}
+
+.diff-deleted {
+  color: #333333;
+  background-color: #ffecec;
+}
+
