--- a/public/sass/pages/_dashboard.scss
+++ b/public/sass/pages/_dashboard.scss
@@ -266,3 +266,8 @@ div.flot-text {
   background-color: #ffecec;
 }
 
+.indent-1 { margin-left: 1rem }
+.indent-2 { margin-left: 2rem }
+.indent-3 { margin-left: 3rem }
+.indent-4 { margin-left: 4rem }
+.indent-5 { margin-left: 5rem } 
