--- a/public/app/features/dashboard/audit/partials/audit.html
+++ b/public/app/features/dashboard/audit/partials/audit.html
@@ -84,12 +84,7 @@
 		</div>
 
 		<div class="audit-log" ng-if="ctrl.mode === 'compare'">
-			<div ng-if="ctrl.loading">
-				<i ng-if="ctrl.loading" class="fa fa-spinner fa-spin"></i>
-				<em>Fetching changes…</em>
-			</div>
-
-			<div class="page-container" ng-if="!ctrl.loading">
+			<div class="page-container">
 				<div class="page-body">
 					<aside class="page-sidebar">
 						<section class="page-sidebar-section">
@@ -100,27 +95,35 @@
 						</section>
 					</aside>
 
-					<div class="tab-content page-content-with-sidebar">
-						<h4>
-							<strong>Comparing Version {{ctrl.selected[0]}} ↔ Version {{ctrl.selected[1]}}</strong>
-							<cite class="muted" ng-if="ctrl.isOriginalCurrent()">(Current)</cite>
-						</h4>
-						<section ng-if="ctrl.diff === 'basic'">
-							<p class="small muted" ng-init="new = ctrl.selected[0]">
-								<strong>Version {{new}}</strong> updated by
-								<span>{{ctrl.getMeta(new, 'createdBy')}}</span> on
-								<span>{{ctrl.formatDate(ctrl.getMeta(new, 'created'), true)}}</span> -
-								<span>{{ctrl.getMeta(new, 'message')}}</span>
-							</p>
-							<p class="small muted" ng-init="original = ctrl.selected[1]">
-								<strong>Version {{original}}</strong> updated by
-								<span>{{ctrl.getMeta(original, 'createdBy')}}</span> on
-								<span>{{ctrl.formatDate(ctrl.getMeta(original, 'created'), true)}}</span> -
-								<span>{{ctrl.getMeta(original, 'message')}}</span>
-							</p>
-						</section>
 
-						<div id="delta" class="small" ng-bind-html="ctrl.delta"></div>
+					<div class="tab-content page-content-with-sidebar">
+						<div ng-if="ctrl.loading">
+							<i ng-if="ctrl.loading" class="fa fa-spinner fa-spin"></i>
+							<em>Fetching changes…</em>
+						</div>
+
+						<div ng-if="!ctrl.loading">
+							<h4>
+								Comparing Version {{ctrl.selected[0]}} ↔ Version {{ctrl.selected[1]}}
+								<cite class="muted" ng-if="ctrl.isOriginalCurrent()">(Current)</cite>
+							</h4>
+							<section ng-if="ctrl.diff === 'basic'">
+								<p class="small muted" ng-init="new = ctrl.selected[0]">
+									<strong>Version {{new}}</strong> updated by
+									<span>{{ctrl.getMeta(new, 'createdBy')}}</span> on
+									<span>{{ctrl.formatDate(ctrl.getMeta(new, 'created'), true)}}</span> -
+									<span>{{ctrl.getMeta(new, 'message')}}</span>
+								</p>
+								<p class="small muted" ng-init="original = ctrl.selected[1]">
+									<strong>Version {{original}}</strong> updated by
+									<span>{{ctrl.getMeta(original, 'createdBy')}}</span> on
+									<span>{{ctrl.formatDate(ctrl.getMeta(original, 'created'), true)}}</span> -
+									<span>{{ctrl.getMeta(original, 'message')}}</span>
+								</p>
+							</section>
+
+							<div id="delta" class="small" ng-bind-html="ctrl.delta"></div>
+						</div>
 					</div>
 				</div>
 			</div>
