Add directive for compiling string templates

--- a/public/app/features/dashboard/audit/partials/audit.html
+++ b/public/app/features/dashboard/audit/partials/audit.html
@@ -121,8 +121,7 @@
 									<span>{{ctrl.getMeta(original, 'message')}}</span>
 								</p>
 							</section>
-
-							<div id="delta" class="small" ng-bind-html="ctrl.delta"></div>
+							<div id="delta" class="small" compile="ctrl.delta"></div>
 						</div>
 					</div>
 				</div>
