--- a/public/app/features/dashboard/audit/partials/audit.html
+++ b/public/app/features/dashboard/audit/partials/audit.html
@@ -11,8 +11,12 @@
 				</a>
 			</li>
 			<li class="gf-tabs-item" ng-show="ctrl.mode === 'compare'">
-				<span ng-if="ctrl.isOriginalCurrent()" class="active gf-tabs-link">Version {{ctrl.selected[0]}} ↔ Current</span>
-				<span ng-if="!ctrl.isOriginalCurrent()" class="active gf-tabs-link">Version {{ctrl.selected[0]}} ↔ Version {{ctrl.selected[1]}}</span>
+				<span ng-if="ctrl.isOriginalCurrent()" class="active gf-tabs-link">
+					Version {{ctrl.selected[0]}} <i class="fa fa-arrows-h" /> Current
+				</span>
+				<span ng-if="!ctrl.isOriginalCurrent()" class="active gf-tabs-link">
+					Version {{ctrl.selected[0]}} <i class="fa fa-arrows-h" /> Version {{ctrl.selected[1]}}
+				</span>
 			</li>
 		</ul>
 
@@ -95,7 +99,6 @@
 						</section>
 					</aside>
 
-
 					<div class="tab-content page-content-with-sidebar">
 						<div ng-if="ctrl.loading">
 							<i ng-if="ctrl.loading" class="fa fa-spinner fa-spin"></i>
@@ -104,7 +107,9 @@
 
 						<div ng-if="!ctrl.loading">
 							<h4>
-								Comparing Version {{ctrl.selected[0]}} ↔ Version {{ctrl.selected[1]}}
+								Comparing Version {{ctrl.selected[0]}}
+								<i class="fa fa-arrows-h" />
+								Version {{ctrl.selected[1]}}
 								<cite class="muted" ng-if="ctrl.isOriginalCurrent()">(Current)</cite>
 							</h4>
 							<section ng-if="ctrl.diff === 'basic'">
@@ -121,12 +126,11 @@
 									<span>{{ctrl.getMeta(original, 'message')}}</span>
 								</p>
 							</section>
-							<div id="delta" class="small" compile="ctrl.delta"></div>
+							<div id="delta" compile="ctrl.delta" />
 						</div>
 					</div>
 				</div>
 			</div>
-
 		</div>
 
 	</div>
