--- a/public/app/features/dashboard/audit/partials/diff-list.html
+++ b/public/app/features/dashboard/audit/partials/diff-list.html
@@ -1,7 +1,7 @@
 <div class="diff-group">
-  <p ng-if="title" class="diff-group-title">
+  <p ng-if="name" class="diff-group-name">
     <i class="diff-circle diff-circle-{{changeType}} fa fa-circle" />
-    {{title}}
+    {{name}}
   </p>
   <ul class="diff-list" ng-transclude></ul>
 </div>
