Add placeholder to save message input

--- a/public/app/features/dashboard/partials/saveDashboardMessage.html
+++ b/public/app/features/dashboard/partials/saveDashboardMessage.html
@@ -19,6 +19,7 @@
 						type="text"
 						name="message"
 						class="gf-form-input"
+						placeholder="Updates to &hellip;"
 						give-focus="true"
 						ng-model="clone.message"
 						ng-model-options="{allowInvalid: true}"
