Don’t hide summary in JSON diff

--- a/public/app/features/dashboard/audit/partials/audit.html
+++ b/public/app/features/dashboard/audit/partials/audit.html
@@ -118,7 +118,7 @@
 								Version {{ctrl.selected[1]}}
 								<cite class="muted" ng-if="ctrl.isOriginalCurrent()">(Current)</cite>
 							</h4>
-							<section ng-if="ctrl.diff === 'basic'">
+							<section>
 								<p class="small muted">
 									<strong>Version {{new}}</strong> updated by
 									<span>{{ctrl.getMeta(new, 'createdBy')}}</span> on
