Format changelog when only a single entry exists

--- a/public/app/features/dashboard/audit/partials/audit.html
+++ b/public/app/features/dashboard/audit/partials/audit.html
@@ -53,7 +53,7 @@
 										<gf-form-switch
 											checked="revision.checked"
 											on-change="ctrl.compareRevisionStateChanged(revision)"
-                      ng-disabled="ctrl.compareRevisionDisabled(revision.checked)">
+											ng-disabled="ctrl.compareRevisionDisabled(revision.checked)">
 										</gf-form-switch>
 									</td>
 									<td>{{revision.version}}</td>
@@ -79,10 +79,20 @@
 
 						<div class="gf-form-group" ng-show="ctrl.mode === 'list'">
 							<div class="gf-form-button-row">
-								<a type="button" class="btn gf-form-button btn-primary" ng-class="{disabled: !ctrl.isComparable()}" ng-click="ctrl.getDiff(ctrl.diff);" ng-disabled="!ctrl.isComparable()">
+								<a	type="button"
+										class="btn gf-form-button btn-primary"
+										ng-if="ctrl.revisions.length > 1"
+										ng-class="{disabled: !ctrl.isComparable()}"
+										ng-click="ctrl.getDiff(ctrl.diff)"
+										ng-disabled="!ctrl.isComparable()">
 									<i class="fa fa-code-fork" ></i>&nbsp;&nbsp;Compare versions
 								</a>
-								<a type="button" class="btn gf-form-button btn-inverse" ng-click="ctrl.addToLog();" ng-class="{disabled: ctrl.isLastPage()}" ng-disabled="ctrl.isLastPage()">
+								<a  type="button"
+										class="btn gf-form-button btn-inverse"
+										ng-if="ctrl.revisions > ctrl.limit"
+										ng-click="ctrl.addToLog()"
+										ng-class="{disabled: ctrl.isLastPage()}"
+										ng-disabled="ctrl.isLastPage()">
 									Show more versions
 								</a>
 							</div>
