--- a/public/app/features/dashboard/audit/partials/audit.html
+++ b/public/app/features/dashboard/audit/partials/audit.html
@@ -49,7 +49,7 @@
 							</thead>
 							<tbody>
 								<tr ng-repeat="revision in ctrl.revisions">
-									<td>
+									<td bs-tooltip="ctrl.compareRevisionDisabled(revision.checked) ? 'You can only compare 2 versions at a time' : ''">
 										<gf-form-switch
 											checked="revision.checked"
 											on-change="ctrl.compareRevisionStateChanged(revision)"
@@ -84,7 +84,7 @@
 										ng-if="ctrl.revisions.length > 1"
 										ng-class="{disabled: !ctrl.isComparable()}"
 										ng-click="ctrl.getDiff(ctrl.diff)"
-										ng-disabled="!ctrl.isComparable()">
+										bs-tooltip="ctrl.isComparable() ? '' : 'Select 2 versions to start comparing'">
 									<i class="fa fa-code-fork" ></i>&nbsp;&nbsp;Compare versions
 								</a>
 								<a  type="button"
