--- a/public/sass/_variables.dark.scss
+++ b/public/sass/_variables.dark.scss
@@ -279,3 +279,20 @@ $card-shadow: -1px -1px 0 0 hsla(0, 0%, 100%, .1), 1px 1px 0 0 rgba(0, 0, 0, .3)
 $footer-link-color:   $gray-1;
 $footer-link-hover:   $gray-4;
 
+
+// Changelog and diff
+// -------------------------
+$diff-label-bg:         $dark-2;
+$diff-label-fg:         $gray-4;
+
+$diff-switch-bg:        $dark-5;
+$diff-switch-disabled:  $gray-1;
+
+$diff-group-bg:         $dark-3;
+$diff-arrow-color:      $white;
+
+$diff-json-bg:          $dark-4;
+$diff-json-fg:          $gray-5;
+$diff-json-added:       #2f5f40;
+$diff-json-deleted:     #5a372a;
+$diff-json-changed-fg:  $gray-5;
