--- a/public/sass/pages/_audit.scss
+++ b/public/sass/pages/_audit.scss
@@ -12,7 +12,7 @@
     }
 
     input + label::before, input + label::after {
-      background-color: $dark-5;
+      background-color: $diff-switch-bg;
       background-image: none;
       border: 0;
       height: 50px;
@@ -20,10 +20,19 @@
     }
   }
 
+  gf-form-switch[disabled]  {
+    .gf-form-switch input + label {
+      &::before {
+        color: $diff-switch-disabled;
+        text-shadow: none;
+      }
+    }
+  }
+
   // .filter-table overrides
   .filter-table {
     tr {
-      border-bottom: 3px solid $dark-2;
+      border-bottom: 3px solid $page-bg;
     }
 
     thead tr {
@@ -36,7 +45,7 @@
       padding: 0;
 
       &:nth-child(2) {
-        border-left: 5px solid $dark-2;
+        border-left: 5px solid $page-bg;
         padding-left: 1.5em;
       }
       &:nth-child(3) { padding-left: $date-padding; }
@@ -81,7 +90,8 @@
   // JSON
   pre {
     border: 0;
-    background: $dark-4;
+    background: $diff-json-bg;
+    color: $diff-json-fg;
     font-size: $font-size-sm;
     line-height: 1.7;
 
@@ -89,6 +99,7 @@
   }
 
   .diff-added, .diff-deleted {
+    color: $diff-json-changed-fg;
     position: relative;
     z-index: 0;
 
@@ -103,8 +114,8 @@
     }
   }
 
-  .diff-added::after { background: #2f5f40; }
-  .diff-deleted::after { background: #5a372a; }
+  .diff-added::after { background: $diff-json-added; }
+  .diff-deleted::after { background: $diff-json-deleted; }
 
   .indent-1 { margin-left: 1rem; }
   .indent-2 { margin-left: 2rem; }
@@ -138,7 +149,7 @@
 }
 
 .diff-group {
-  background: $dark-3;
+  background: $diff-group-bg;
   padding: 10px 15px;
 
   & .diff-group { padding: 0 5px; }
@@ -167,9 +178,9 @@
 }
 
 .diff-label {
-  background-color: $dark-2;
+  background-color: $diff-label-bg;
   border-radius: 3px;
-  color: $gray-4;
+  color: $diff-label-fg;
   display: inline;
   font-size: .95rem;
   margin: 0 5px;
@@ -181,5 +192,5 @@
 }
 
 .diff-arrow {
-  color: $white;
+  color: $diff-arrow-color;
 }
