Persist response when switching between deltas

--- a/public/app/features/dashboard/audit/partials/audit.html
+++ b/public/app/features/dashboard/audit/partials/audit.html
@@ -147,7 +147,7 @@
 									<span>{{ctrl.getMeta(original, 'message')}}</span>
 								</p>
 							</section>
-							<div id="delta" compile="ctrl.delta" />
+							<div id="delta" compile="ctrl.delta[ctrl.diff]" />
 						</div>
 					</div>
 				</div>
