--- a/public/sass/_variables.dark.scss
+++ b/public/sass/_variables.dark.scss
@@ -293,6 +293,11 @@ $diff-arrow-color:      $white;
 
 $diff-json-bg:          $dark-4;
 $diff-json-fg:          $gray-5;
+
 $diff-json-added:       #2f5f40;
-$diff-json-deleted:     #5a372a;
+$diff-json-deleted:     #862d2d;
+
 $diff-json-changed-fg:  $gray-5;
+$diff-json-changed-num: $text-muted;
+
+$diff-json-icon:        $gray-7;
