--- a/public/sass/pages/_audit.scss
+++ b/public/sass/pages/_audit.scss
@@ -86,54 +86,71 @@
 // Actual Diff
 #delta {
   margin: 2em 0;
+}
 
-  // JSON
-  pre {
-    border: 0;
-    background: $diff-json-bg;
-    color: $diff-json-fg;
-    font-size: $font-size-sm;
-    line-height: 1.7;
+// JSON
+@for $i from 0 through 16 {
+  .diff-indent-#{$i} {
+    padding-left: $i * 1.5rem;
+    margin-left: 10px;
+  }
+}
 
-    span { padding: 2px 0; }
+.delta-html {
+  background: $diff-json-bg;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  user-select: none;
+}
+
+.diff-line {
+  color: $diff-json-fg;
+  font-family: $font-family-monospace;
+  font-size: $font-size-sm;
+  line-height: 2;
+  margin-bottom: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  position: relative;
+
+  &:before, &:after {
   }
 
-  .diff-added, .diff-deleted {
-    color: $diff-json-changed-fg;
-    position: relative;
-    z-index: 0;
+  &:after { left: -40px; }
+}
 
-    &::after {
-      content: '';
-      height: 20px;
-      width: 1000px;
-      position: absolute;
-      top: -2px;
-      left: -35px;
-      z-index: -10;
-    }
-  }
+.diff-line-number {
+  color: $text-muted;
+  display: inline-block;
+  font-size: $font-size-xs;
+  line-height: 2.3;
+  text-align: right;
+  width: 30px;
+}
 
-  .diff-added::after { background: $diff-json-added; }
-  .diff-deleted::after { background: $diff-json-deleted; }
+.diff-line-number-hide { visibility: hidden; }
 
-  .indent-1 { margin-left: 1rem; }
-  .indent-2 { margin-left: 2rem; }
-  .indent-3 { margin-left: 3rem; }
-  .indent-4 { margin-left: 4rem; }
-  .indent-5 { margin-left: 5rem; }
+.diff-line-icon {
+  color: $diff-json-icon;
+  font-size: $font-size-xs;
+  float: right;
+  position: relative;
+  top: 2px;
+  right: 10px;
+}
 
-  .circle {
-    border-radius: 50%;
-    width: 14px;
-    height: 14px;
-    display: inline-block;
-    margin-right: .75rem;
-  }
+.diff-json-new, .diff-json-old {
+  color: $diff-json-changed-fg;
 
-  .circle-changed { background: #f59433; }
-  .circle-added   { background: #29D761; }
-  .circle-deleted { background: #fd474a; }
+  & .diff-line-number { color: $diff-json-changed-num; }
+}
+
+.diff-json-new { background-color: $diff-json-added; }
+.diff-json-old { background-color: $diff-json-deleted; }
+
+.diff-value {
+  user-select: all;
 }
 
 // Basic
