--- a/public/app/features/dashboard/audit/partials/audit.html
+++ b/public/app/features/dashboard/audit/partials/audit.html
@@ -133,18 +133,18 @@
 								Version {{ctrl.selected[1]}}
 								<cite class="muted" ng-if="ctrl.isOriginalCurrent()">(Current)</cite>
 							</h4>
-							<section>
+							<section ng-if="ctrl.diff === 'basic'">
 								<p class="small muted">
 									<strong>Version {{new}}</strong> updated by
-									<span>{{ctrl.getMeta(new, 'createdBy')}}</span> on
-									<span>{{ctrl.formatDate(ctrl.getMeta(new, 'created'), true)}}</span> -
-									<span>{{ctrl.getMeta(new, 'message')}}</span>
+									<span>{{ctrl.getMeta(new, 'createdBy')}} </span>
+									<span>{{ctrl.formatBasicDate(ctrl.getMeta(new, 'created'))}}</span>
+									<span> - {{ctrl.getMeta(new, 'message')}}</span>
 								</p>
 								<p class="small muted">
 									<strong>Version {{original}}</strong> updated by
-									<span>{{ctrl.getMeta(original, 'createdBy')}}</span> on
-									<span>{{ctrl.formatDate(ctrl.getMeta(original, 'created'), true)}}</span> -
-									<span>{{ctrl.getMeta(original, 'message')}}</span>
+									<span>{{ctrl.getMeta(original, 'createdBy')}} </span>
+									<span>{{ctrl.formatBasicDate(ctrl.getMeta(original, 'created'))}}</span>
+									<span> - {{ctrl.getMeta(original, 'message')}}</span>
 								</p>
 							</section>
 							<div id="delta" diff-delta>
