Basic & JSON diff tweaks

--- a/public/sass/_variables.dark.scss
+++ b/public/sass/_variables.dark.scss
@@ -297,6 +297,9 @@ $diff-json-fg:          $gray-5;
 $diff-json-added:       #2f5f40;
 $diff-json-deleted:     #862d2d;
 
+$diff-json-old:         #5a372a;
+$diff-json-new:         #664e33;
+
 $diff-json-changed-fg:  $gray-5;
 $diff-json-changed-num: $text-muted;
 
