--- a/public/sass/_variables.light.scss
+++ b/public/sass/_variables.light.scss
@@ -321,6 +321,9 @@ $diff-json-fg:          $gray-2;
 $diff-json-added:       lighten(desaturate($green, 30%), 10%);
 $diff-json-deleted:     desaturate($red, 35%);
 
+$diff-json-old:       #5a372a;
+$diff-json-new:       #664e33;
+
 $diff-json-changed-fg:  $gray-6;
 $diff-json-changed-num: $gray-4;
 $diff-json-icon:        $gray-4;
